--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css">
+    <script src="/JS/ASYNC_AWAIT.js"></script>
     <!-- <script src="./JS/script.js"></script> --> -->
     <!-- <script src="./JS/FUNCTIONS.js"></script>
     <script src="./JS/if__else.js"></script>
@@ -47,13 +48,13 @@
     <!-- <script src="./JS/QUESTIONS.js"></script> -->
     <!-- <script src="./JS/AXIOS.js" type="module"></script> -->
     <!-- <script src="./JS/JSON.js" defer></script> -->
-    <script src="./JS/API.js" type="module"></script>
+    <!-- <script src="./JS/API.js" type="module"></script> -->
     <!-- <script src="./JS/REFLECT_API.js"></script> -->
     <!-- <script src="./JS/PROXY_API.js"></script> -->
     <!-- <script src="./JS/KEYBOARDEVENTS.js"></script> -->
     <!-- <script src="./JS/TABNAVIGATION.js" defer></script> -->
+    <!-- <script src="./JS/REGEX.js"></script> -->
 
-    <script src="./JS/REGEX.js"></script>
     <title>JAVASCRIPT</title>
   </head>
 
