--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css">
-    <script src="/JS/ASYNC_AWAIT.js"></script>
-    <!-- <script src="./JS/script.js"></script> --> -->
+    <script src="./JS/DATETIME.js/" defer></script>
+    <!-- <script src="/JS/ASYNC_AWAIT.js"></script> -->
+    <!-- <script src="./JS/script.js"></script> -->
     <!-- <script src="./JS/FUNCTIONS.js"></script>
     <script src="./JS/if__else.js"></script>
     <script src="./JS/switch__case.js"></script>
@@ -21,7 +22,6 @@
     <script src="./JS/DEBUGGING.js"></script>
     <script src="./JS/TRYCATCH.js"></script>
     <script src="./JS/TIMER&INTERVAL.js"></script>
-    <script src="./JS/DATETIME.js/"></script>
     <script src="./JS/DIALOGS.js"></script>
     <script src="./JS/EVENTS.js"></script>
     <script type="module" src="./JS/EXPORTS.js"></script>
