--- a/index.html
+++ b/index.html
@@ -6,26 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css">
-    <script src="./JS/DATETIME.js/" defer></script>
     <!-- <script src="/JS/ASYNC_AWAIT.js"></script> -->
     <!-- <script src="./JS/script.js"></script> -->
     <!-- <script src="./JS/FUNCTIONS.js"></script>
-    <script src="./JS/if__else.js"></script>
-    <script src="./JS/switch__case.js"></script>
-    <script src="./JS/loops.js"></script>
-    <script src="./JS/taining.js"></script>
-    <script src="./JS/Strings.js"></script>
-    <script src="./JS/OBJECTS.js"></script>
-    <script src="./JS/HOMEWORKS.js"></script>
-    <script src="./JS/ARRAYS.js"></script>
-    <script src="./JS/EXERCISE.js"></script>
-    <script src="./JS/DEBUGGING.js"></script>
-    <script src="./JS/TRYCATCH.js"></script>
-    <script src="./JS/TIMER&INTERVAL.js"></script>
-    <script src="./JS/DIALOGS.js"></script>
-    <script src="./JS/EVENTS.js"></script>
-    <script type="module" src="./JS/EXPORTS.js"></script>
-    <script type="module" src="./JS/IMPORT.js"></script> -->
+      <script src="./JS/if__else.js"></script>
+      <script src="./JS/switch__case.js"></script>
+      <script src="./JS/loops.js"></script>
+      <script src="./JS/taining.js"></script>
+      <script src="./JS/Strings.js"></script>
+      <script src="./JS/OBJECTS.js"></script>
+      <script src="./JS/HOMEWORKS.js"></script>
+      <script src="./JS/ARRAYS.js"></script>
+      <script src="./JS/EXERCISE.js"></script>
+      <script src="./JS/DEBUGGING.js"></script>
+      <script src="./JS/TRYCATCH.js"></script>
+      <script src="./JS/TIMER&INTERVAL.js"></script>
+      <script src="./JS/DIALOGS.js"></script>
+      <script src="./JS/EVENTS.js"></script>
+      <script type="module" src="./JS/EXPORTS.js"></script>
+      <script type="module" src="./JS/IMPORT.js"></script> -->
     <!-- <script src="./JS/HOISTING.js"></script> -->
     <!-- <script src="./JS/DEFAULT&REST.js"></script> -->
     <!-- <script src="./JS/ARROWFUNCTION.js"></script> -->
@@ -54,6 +53,7 @@
     <!-- <script src="./JS/KEYBOARDEVENTS.js"></script> -->
     <!-- <script src="./JS/TABNAVIGATION.js" defer></script> -->
     <!-- <script src="./JS/REGEX.js"></script> -->
+    <script src="./JS/DATETIME.js"></script>
 
     <title>JAVASCRIPT</title>
   </head>
