--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <script src="./JS/TRYCATCH.js"></script>
       <script src="./JS/TIMER&INTERVAL.js"></script>
       <script src="./JS/DIALOGS.js"></script>
-      <script src="./JS/EVENTS.js"></script>
       <script type="module" src="./JS/EXPORTS.js"></script>
       <script type="module" src="./JS/IMPORT.js"></script> -->
     <!-- <script src="./JS/HOISTING.js"></script> -->
@@ -53,7 +52,9 @@
     <!-- <script src="./JS/KEYBOARDEVENTS.js"></script> -->
     <!-- <script src="./JS/TABNAVIGATION.js" defer></script> -->
     <!-- <script src="./JS/REGEX.js"></script> -->
-    <script src="./JS/DATETIME.js"></script>
+    <!-- <script src="./JS/DATETIME.js"></script> -->
+    <script src="./JS/EVENTS.js"></script>
+
 
     <title>JAVASCRIPT</title>
   </head>
