--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         onmouseleave="el2hoverout()"></div>
     </div>
 
-    <h2 id="test" class="text-center mb-10 font-bold text-4xl cursor-pointer text-white bg-orange-600 w-32 mx-auto rounded-md" onclick="log()">CLICK</h2>
+    <h2 id="test"
+      class="text-center mb-10 font-bold text-4xl cursor-pointer text-white bg-orange-600 w-32 mx-auto rounded-md"
+      onclick="log()">CLICK</h2>
 
     <!-- * PREVENT DEFAULT ---------------------------------------------------------------------->
     <!-- <div class="flex items-center justify-center">
