--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
     <h1 id="callbackTest"></h1> -->
     <h1 id="head" onclick="hello()">HELLO WORLD</h1>
 
-    <h2 id="clock" onclick="showTime()" class="w-52 bg-yellow-500 mx-auto my-10 px-4 py-2 text-sm text-center rounded-full font-bold">CLICK ME TO SHOW TIME</h2>
+    <h2 id="clock" onclick="showTime()"
+      class="w-52 bg-yellow-500 mx-auto my-10 px-4 py-2 text-sm text-center rounded-full font-bold">CLICK ME TO SHOW
+      TIME
+    </h2>
 
     <p id="text" class="px-4 font-bold text-slate-800 bg-slate-200 py-2 mx-auto w-fitcontent"></p>
 
