--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- <script src="./JS/EVENTBUBBLING.js"></script> -->
     <!-- <script src="./JS/PROMISES.js" type="module"></script> -->
     <!-- <script src="./JS/MAPS&SETS.js"></script> -->
-    <!-- <script src="./JS/QUESTIONS.js"></script> -->
+
     <!-- <script src="./JS/AXIOS.js" type="module"></script> -->
     <!-- <script src="./JS/JSON.js" defer></script> -->
     <!-- <script src="./JS/API.js" type="module"></script> -->
@@ -53,8 +53,8 @@
     <!-- <script src="./JS/TABNAVIGATION.js" defer></script> -->
     <!-- <script src="./JS/REGEX.js"></script> -->
     <!-- <script src="./JS/DATETIME.js"></script> -->
-    <script src="./JS/EVENTS.js"></script>
-
+    <!-- <script src="./JS/EVENTS.js"></script> -->
+    <!-- <script src="./JS/QUESTIONS.js" type="module"></script> -->
 
     <title>JAVASCRIPT</title>
   </head>
