--- a/index.html
+++ b/index.html
@@ -55,32 +55,30 @@
     <!-- <script src="./JS/DATETIME.js"></script> -->
     <!-- <script src="./JS/EVENTS.js"></script> -->
     <!-- <script src="./JS/QUESTIONS.js" type="module"></script> -->
-
+    <script src="/REVIEW.js" defer type="module"></script>
     <title>JAVASCRIPT</title>
   </head>
 
   <body class="bg-zinc-950">
     <!-- * HEADER  ---------------------------------------------------------------------------->
-    <h1 id="callbackTest"></h1> -->
-    <h1 id="head" onclick="hello()">HELLO WORLD</h1>
+    <!-- <h1 id="callbackTest"></h1> --> -->
+    <!-- <h1 id="head" onclick="hello()">HELLO WORLD</h1> -->
 
-    <h2 id="clock" onclick="showTime()"
+    <!-- <h2 id="clock" onclick="showTime()"
       class="w-52 bg-yellow-500 mx-auto my-10 px-4 py-2 text-sm text-center rounded-full font-bold">CLICK ME TO SHOW
       TIME
-    </h2>
+    </h2> -->
 
-    <p id="text" class="px-4 font-bold text-slate-800 bg-slate-200 py-2 mx-auto w-fitcontent"></p>
+    <!-- <p id="text" class="px-4 font-bold text-slate-800 bg-slate-200 py-2 mx-auto w-fitcontent"></p> -->
 
     <!-- * EVENTLISTENER ---------------------------------------------------------------------->
-    <div id="el1" class="bg-slate-800 w-56 h-56 rounded-3xl mx-auto my-10 flex items-center justify-center"
+    <!-- <div id="el1" class="bg-slate-800 w-56 h-56 rounded-3xl mx-auto my-10 flex items-center justify-center"
       onmouseenter="hover()" onmouseleave="hoverout()">
       <div id="el2" class="bg-rose-500 w-20 h-20 rounded-2xl" onclick="showText()" onmouseenter="el2hover()"
         onmouseleave="el2hoverout()"></div>
     </div>
 
-    <h2 id="test"
-      class="text-center mb-10 font-bold text-4xl cursor-pointer text-white bg-orange-600 w-32 mx-auto rounded-md"
-      onclick="log()">CLICK</h2>
+    <h2 id="test" class="text-center mb-10 font-bold text-4xl cursor-pointer text-white bg-orange-600 w-32 mx-auto rounded-md" onclick="log()">CLICK</h2> -->
 
     <!-- * PREVENT DEFAULT ---------------------------------------------------------------------->
     <!-- <div class="flex items-center justify-center">
